Refactor, use UpsertRequestBuilder directly in tests